Update to Scala 2.10.4, SBT 0.13.1